# MD-Explorations

Economics/: INDEX.md  README.md
Enneagram/: 00-overview.md  type-1.md  type-2.md  type-3.md  type-4.md  type-5.md  type-6.md  type-7.md  type-8.md  type-9.md
ResearchAnalytics/: .env.example  .gitignore  README.md  pyproject.toml
ResearchAnalytics/docs/superpowers/: HANDOFF.md
ResearchAnalytics/docs/superpowers/plans/: 2026-05-29-idea-evaluation-engine.md
ResearchAnalytics/docs/superpowers/specs/: 2026-05-29-idea-evaluation-engine-design.md
ResearchAnalytics/evaluate/: __init__.py  __main__.py  config.py  contracts.py  pipeline.py  store.py  tiering.py
ResearchAnalytics/evaluate/llm/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  openai.py
ResearchAnalytics/evaluate/render/: __init__.py  chat.py  formal.py
ResearchAnalytics/evaluate/search/: __init__.py  base.py  firecrawl.py  tavily.py
ResearchAnalytics/evaluate/stages/: __init__.py  cases.py  context.py  policy.py  positions.py  redteam.py  synthesize.py  verify.py
ResearchAnalytics/tests/: test_cli.py  test_contracts.py  test_contracts_synthesis.py  test_factory.py  test_pipeline.py  test_store.py  test_tiering.py
ResearchAnalytics/tests/llm/: test_adapters.py  test_base.py
ResearchAnalytics/tests/render/: __init__.py  test_render.py
ResearchAnalytics/tests/search/: __init__.py  test_firecrawl.py
ResearchAnalytics/tests/stages/: __init__.py  test_cases.py  test_context.py  test_policy.py  test_positions.py  test_redteam.py  test_synthesize.py  test_verify.py
(+261 files in other folders)
